--- a/templates/template_wedding_1/index.html
+++ b/templates/template_wedding_1/index.html
@@ -143,10 +143,9 @@
                     </h3>
                     <hr align="right" class="green">
                     <p class="ml-lg-20p text-gray mr-5">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br><br>
-
-
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                        It’s a blessing when you meet someone that has the same purpose as you. And it’s what makes us dream-driven, passionate, and eager every day. Because we have that someone that will continue to enjoy the things we do every day, and we are blessed to share that purpose together. Not everyone in this world gets to do something like us.
+                        <br><br>
+                        Bruce and Natasha are both veterinarians, working with the most beautiful animals in the world and have been continuing what they’re doing since 2015. They have been in a relationship for 5 years and it's time to tie the knot. So they invite you to join their special day, and celebrate their journey and their passion.
                     </p>
                 </div>
             </div>
@@ -167,10 +166,10 @@
                         </h1>
                         <hr align="left" class="line-style my-lg-4 my-5">    
                         <p class="text-gray pl-lg-5 ml-lg-5 ml-4 mr-lg-5 pr-lg-3">
-                            For the past 6 years of knowing each other,
-                            we’ve been going through up and down, and
-                            decided that we wantedd to be together
-                            forever as life goes on.
+                            Bruce is passionate and loyal personnel. He always taught me to not give up in any situation, he teaches me a lot in life and at the point where he would never let me down in any way. And I’m lucky enough to call him my husband.
+                            <br><br>
+- Natasha
+
                         </p>
                     </div>
                     <div data-aos="fade-left" class="col-lg-7 pr-lg-0 order-lg-2 order-1 pl-4 pl-lg-2">
@@ -191,10 +190,9 @@
                             </h1>
                             <hr align="left" class="line-style my-lg-4 my-5">    
                             <p class="text-gray pl-lg-5 ml-lg-5 ml-4">
-                                For the past 6 years of knowing each other,<br>
-                                we’ve been going through up and down, and<br>
-                                decided that we wantedd to be together<br>
-                                forever as life goes on.
+                                Natasha is simply amazing, how she is always curious, always willing to learn everything to achieve her dream. She is someone that I looked up to for so long, and maybe she doesn’t even notice! I can’t thank her enough for what she does for me, to keep me strong, and to be what am I today.
+                                <br><br>
+                                -Bruce
                             </p>
                         </div>
                         <div class="col-lg-7 pr-lg-0 order-lg-2 order-1 pl-4 pl-lg-2">
@@ -239,8 +237,7 @@
                     <span class="font-weight-bold">
                         09.30 - 10.00 am
                     </span><br>
-                    Join us in a holy matrimony of blabla<br>
-                    lorem ipsum dolor sit amet
+                    Join us in Our Holy Matrimony and celebrate our wedding blessing!
                 </p>
                 <a class="button-come" href="#">
                     SEE LOCATION
@@ -256,10 +253,9 @@
                         23 September 2020
                     </span><br>
                     <span class="font-weight-bold">
-                        09.30 - 10.00 am
+                        17.00 - 19.00 am
                     </span><br>
-                    Join us in a holy matrimony of blabla<br>
-                    lorem ipsum dolor sit amet
+                    Join us in Our Wedding Reception and be part of the unforgettable celebration of our lives!
                 </p>
                 <p class="text-gray">
                     Dresscode: Floral Pattern Attire
