--- a/templates/template_wedding_2/index.html
+++ b/templates/template_wedding_2/index.html
@@ -158,10 +158,10 @@
                     Ever Since,
                 </h2>
                 <p data-aos="fade-left" class="text-white offset-lg-2 d-none d-lg-block">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    We kinda already know we were meant for each other no matter how hard the situations are, we stick together till the end, and somehow things will go right again. Each of us didn’t even believe this was happening because it’s surreal how we always get each other back up no matter what happens, and willing to continue to do so. So then I, Peter, proceed and decided that I want Mary to be The One for my life.
                 </p>
                 <p data-aos="fade-left" class="text-white offset-lg-2 d-lg-none mt-5">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    We kinda already know we were meant for each other no matter how hard the situations are, we stick together till the end, and somehow things will go right again. Each of us didn’t even believe this was happening because it’s surreal how we always get each other back up no matter what happens, and willing to continue to do so. So then I, Peter, proceed and decided that I want Mary to be The One for my life.
                 </p>
             </div>
         </div>
@@ -208,7 +208,7 @@
                 </p>
                 <p class="text-white">
                     So we wanted to invite you to this<br>
-                    special day of us to celbrate with us<br>
+                    special day of us to celebrate with us<br>
                     in our journey of a lifetime.<br>
                 </p>
             </div>
@@ -269,11 +269,11 @@
             </div>
             <div class="col-lg-3 offset-lg-1 pr-lg-5">
                 <p class="text-grayish-blue mt-lg-3 float-lg-right d-none d-lg-block">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    Here are our moments have taken while we are in London. Thank you Axios for being our photographer and to catch these unforgettable moments, we will always continue to treasure these moments from now on.
                 <br>
                 </p>
                 <p class="text-grayish-blue mt-3 float-lg-right d-lg-none">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    Here are our moments have taken while we are in London. Thank you Axios for being our photographer and to catch these unforgettable moments, we will always continue to treasure these moments from now on.
                 <br>
                 </p>
             </div>
