--- a/templates/template_wedding_3/index.html
+++ b/templates/template_wedding_3/index.html
@@ -310,7 +310,7 @@
         </section>
         <!-- Footer -->
         <footer class="pt-lg-1p pb-lg-1p text-center">
-            <p class="mb-lg-0">powered by reservasidulu</p>
+            <p class="mb-lg-0">All Rights Reserved © This website is made by Reservasi Dulu</p>
         </footer>
     </div>
     <!-- Features JS -->
