--- a/templates/template_wedding_6/index.html
+++ b/templates/template_wedding_6/index.html
@@ -323,7 +323,7 @@
                                         Hotel Mulia Bali is one of the famous hotel in Bali, Indonesia. We’re excited to show you our hospitality, so we provide you 1 suite bedroom that can fit for 2 people, and also equipped with a lot of facilities such as welcome drinks, hot water, a bottle of wine, and so on.
                                     </p>
                                     <p class="mb-m-15p mb-lg-10p">*Please mention vicky & wanda, when you reserve them</p>
-                                    <a class="button-cream" target="_blank" href="">SEE LOCATION <img class="img-fluid" src="images/btn-arrow-right.png" /></a>
+                                    <a class="button-cream" target="_blank" href="https://g.page/The-Mulia-Nusa-Dua-Bali?share">SEE LOCATION <img class="img-fluid" src="images/btn-arrow-right.png" /></a>
                                     <br /><br /><br />
                                 </div>
                             </div>
