--- a/templates/template_wedding_8/index.html
+++ b/templates/template_wedding_8/index.html
@@ -143,7 +143,7 @@
                     <img data-aos="fade-up" class="img-fluid img-title" src="images/title.png" />
                     <div class="wrap" data-aos="fade-left" >
                         <p>
-                            Your convenience is one of our concerna, we have booked you a room at this following place:
+                            Your convenience is one of our concerns, we have booked you a room at this following place:
                         </p>
                         <div class="w-lg-100p mb-lg-5p line-white"></div>
                         <h6>The Wyatt Hotel</h6>
@@ -171,24 +171,24 @@
                             <a class="button-default boxc" href="">VIEW GALLERY</a>
                             <img class="img-fluid boxc motif1" src="images/icon-03.png" />
                             <div class="box images1">
-                                <img data-aos="fade-down" class="img-fluid" src="images/images-06.png" />
+                                <img data-aos="fade-down" data-aos-offset="-100" class="img-fluid" src="images/images-06.png" />
                             </div>
                             <div class="box images2">
                                 <img data-aos="fade-left" class="img-fluid" src="images/images-07.png" />
                             </div>
                             <div class="box images3">
-                                <img data-aos="fade-up" class="img-fluid" src="images/images-08.png" />
+                                <img data-aos="fade-up" data-aos-offset="-100" class="img-fluid" src="images/images-08.png" />
                             </div>
                             <div class="box images4">
-                                <img data-aos="fade-right" class="img-fluid" src="images/images-09.png" />
+                                <img data-aos="fade-right" data-aos-offset="-200" class="img-fluid" src="images/images-09.png" />
                             </div>
                             <div class="box images5">
-                                <img data-aos="fade-up" class="img-fluid" src="images/images-10.png" />
+                                <img data-aos="fade-up" data-aos-offset="-200" class="img-fluid" src="images/images-10.png" />
                             </div>
                             <img class="img-fluid boxc motif2" src="images/icon-04.png" />
                             <img class="img-fluid boxc motif3" src="images/icon-05.png" />
                             <div class="box images6">
-                                <img data-aos="fade-right" class="img-fluid" src="images/images-11.png" />
+                                <img data-aos="fade-right" data-aos-offset="-400" class="img-fluid" src="images/images-11.png" />
                             </div>
                         </div>
                     </div>
@@ -235,7 +235,10 @@
                                     <input type="text" class="form-control" id="your-guest" name="your-guest" required>
                                 </div>
                                 <div class="form-group col-lg-12 pt-m-10p mb-m-0 pt-lg-5p text-right">
-                                    <button type="submit" class="button-default">Submit</button>
+                                    <button type="submit" class="button-default">Submit</button><br><br>
+                                    <a href="invitation.pdf" class="button-download">
+                                        Download Invitation
+                                    </a>
                                 </div>
                             </div>
                         </form>
