--- a/templates/template_wedding_9/index.html
+++ b/templates/template_wedding_9/index.html
@@ -169,7 +169,7 @@
                             </li>
                         </ul>
                         <div class="tab-content" id="myTabContent2">
-                            <div class="tab-pane" id="tabweddingceremony" role="tabpanel" aria-labelledby="tabweddingceremony-tab">
+                            <div class="tab-pane fade" id="tabweddingceremony" role="tabpanel" aria-labelledby="tabweddingceremony-tab">
                                 <div class="container-fluid">
                                     <div class="row">
                                         <div class="col-lg-6 padbrief">
@@ -178,7 +178,7 @@
                                                     <h5>OUR WEDDING CEREMONY</h5>
                                                 </div>
                                                 <div class="col-lg-5 p-0">
-                                                    <a class="button-default d-none d-lg-block" href="">See location <img class="img-fluid" src="images/arrow-03.png" /></a>
+                                                    <a class="button-default d-none d-lg-block" href="https://goo.gl/maps/JkxkeuWMKGTnkxz18">See location <img class="img-fluid" src="images/arrow-03.png" /></a>
                                                 </div>
                                                 <div class="col-lg-12 brief pb-m-10p pb-lg-5p">
                                                     <div class="row st">
@@ -207,7 +207,7 @@
                                                 </div>
                                                 <div class="col-lg-5"></div>
                                                 <div class="col-12">
-                                                    <a class="button-default d-block d-lg-none" href="">See location <img class="img-fluid" src="images/arrow-03.png" /></a>
+                                                    <a class="button-default d-block d-lg-none" href="https://goo.gl/maps/JkxkeuWMKGTnkxz18">See location <img class="img-fluid" src="images/arrow-03.png" /></a>
                                                 </div>
                                             </div>
                                         </div>
@@ -220,7 +220,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="tab-pane" id="tabweddingparty" role="tabpanel" aria-labelledby="tabweddingparty-tab">
+                            <div class="tab-pane fade" id="tabweddingparty" role="tabpanel" aria-labelledby="tabweddingparty-tab">
                                 <div class="container-fluid">
                                     <div class="row">
                                         <div class="col-lg-6 padbrief">
@@ -229,7 +229,7 @@
                                                     <h5>OUR WEDDING GARDEN PARTY</h5>
                                                 </div>
                                                 <div class="col-lg-5 p-0">
-                                                    <a class="button-default d-none d-lg-block" href="">See location <img class="img-fluid" src="images/arrow-03.png" /></a>
+                                                    <a class="button-default d-none d-lg-block" href="https://goo.gl/maps/JkxkeuWMKGTnkxz18">See location <img class="img-fluid" src="images/arrow-03.png" /></a>
                                                 </div>
                                                 <div class="col-lg-12 brief pb-m-10p pb-lg-5p">
                                                     <div class="row st">
@@ -265,7 +265,7 @@
                                                     </p>
                                                 </div>
                                                 <div class="col-12">
-                                                    <a class="button-default d-block d-lg-none" href="">See location <img class="img-fluid" src="images/arrow-03.png" /></a>
+                                                    <a class="button-default d-block d-lg-none" href="https://goo.gl/maps/JkxkeuWMKGTnkxz18">See location <img class="img-fluid" src="images/arrow-03.png" /></a>
                                                 </div>
                                             </div>
                                         </div>
@@ -303,7 +303,7 @@
                         <p>
                             The Confidante also provides you each 1 breakfast/day, just don’t forget to mention our name “Steve & Sharon Wedding” when you are reserving for a room.
                         </p><br />
-                        <a class="button-default" href="">See location <img class="img-fluid" src="images/arrow-02.png" /></a>
+                        <a class="button-default" href="https://goo.gl/maps/JkxkeuWMKGTnkxz18">See location <img class="img-fluid" src="images/arrow-02.png" /></a>
                     </div>
                 </div>
             </div>
@@ -327,28 +327,36 @@
                     <div  data-aos="fade-up" class="col-lg-12 pb-m-15p pb-lg-5p pl-lg-10p pr-lg-10p">
                         <div class="three-carousel owl-theme">
                             <div class="item">
-                                <img class="img-fluid w-lg-100p" src="images/images-07.png" />
+                                <img class="img-fluid w-lg-100p" src="images/images-07.png" data-toggle="modal" data-target="#item_1" />
                             </div>
                             <div class="item">
-                                <img class="img-fluid w-lg-100p" src="images/images-08.png" />
+                                <img class="img-fluid w-lg-100p" src="images/images-08.png" data-toggle="modal" data-target="#item_2" />
                             </div>
                             <div class="item">
-                                <img class="img-fluid w-lg-100p" src="images/images-09.png" />
+                                <img class="img-fluid w-lg-100p" src="images/images-09.png" data-toggle="modal" data-target="#item_3" />
                             </div>
                             <div class="item">
-                                <img class="img-fluid w-lg-100p" src="images/images-10.png" />
+                                <img class="img-fluid w-lg-100p" src="images/images-10.png"  data-toggle="modal" data-target="#item_4" />
                             </div>
                             <div class="item">
-                                <img class="img-fluid w-lg-100p" src="images/images-11.png" />
+                                <img class="img-fluid w-lg-100p" src="images/images-11.png" data-toggle="modal" data-target="#item_5" />
                             </div>
                             <div class="item">
-                                <img class="img-fluid w-lg-100p" src="images/images-12.png" />
+                                <img class="img-fluid w-lg-100p" src="images/images-12.png" data-toggle="modal" data-target="#item_6" />
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+        <!-- The Popups -->
+        <!-- Modal -->
+        <div class="modal fade" id="item_1" tabindex="-1" role="dialog" aria-hidden="true">
+            <div class="modal-dialog moda-xl" role="document">
+                    <img class="gallery-close" src="images/close-02.png" alt="">
+                    <img class="img-fluid w-lg-100p" src="images/images-07.png" data-toggle="modal" data-target="#item_1" />                    
+            </div>
+        </div>
         <!-- Section Countdown -->
         <section id="countdown">
             <div class="container-fluid bg-lightblue">
