--- a/templates/template_wedding_1/style-wedding-1.css
+++ b/templates/template_wedding_1/style-wedding-1.css
@@ -57,6 +57,9 @@
   .nav-wedding ul li{
     display: inline;
   }
+  .nav-wedding ul li:hover{
+    border-bottom: 1.5px solid #fff;
+  }
   .nav-wedding ul li a{
     color: #fff;
   }
@@ -301,6 +304,11 @@
     -moz-box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.35);
     box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.35);
   }
+  .accomodation .button-location:hover{
+    background: #fff;
+    color: #efcc60;
+    border: 2px solid #efcc60;
+  }
   .button-come{
     background: #fff;
     color: #EFCC60;
@@ -309,6 +317,12 @@
     border-radius: 25px;
     letter-spacing: 0.8px;
     box-shadow: 0px 4px 2px 0px rgba(0,0,0,0.1);
+  }
+  .button-come:hover{
+    border: 2px solid #fff;
+    color: #fff;
+    background-color: #efcc60;
+
   }
   .button-cyan{
       background: #84AFA1;
