--- a/templates/template_wedding_4/index.html
+++ b/templates/template_wedding_4/index.html
@@ -256,6 +256,7 @@
                                     </div>
                                     <div class="form-group col-lg-12 mb-m-0 pt-lg-5p text-right">
                                         <button type="submit" class="button-default">Submit</button>
+                                        <a href="invitation.pdf" class="button-download">Download Invitation</a>
                                     </div>
                                 </div>
                             </form>
