--- a/templates/template_wedding_5/index.html
+++ b/templates/template_wedding_5/index.html
@@ -67,7 +67,7 @@
                 <div class="row">
                     <div class="col-lg-12 px-0 px-lg-0">
                         <div id="dateandplace-wrap" class="wrap boxc">
-                            <div  data-aos="zoom-out" data-aos-offset="-500">
+                            <div  data-aos="zoom-out" data-aos-offset="-700">
                             <div class="pos-rel w-lg-100p mb-lg-5p">
                                 <div class="line-white boxc l"></div>
                                 <div class="line-white boxc r"></div>
@@ -411,6 +411,7 @@
                                 </tr>
                                 <tr>
                                     <td></td><td class="text-right">
+                                        <a class="button-download" href="invitation-03.jpg" download="invitation-03">Download Invitation</a>
                                         <input type="submit" class="button-green bs" data-toggle="modal" data-target="#ebrochure" value="SUBMIT" />
                                     </td>
                                 </tr>
